--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,19 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.container{
+  /* display: flex; */
+  color: red;
+  max-width: 1080px;
+  border:3px solid black;
+  margin:0 auto;
+
+
+  /* align-items: center; */
+}
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
