--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,6 @@ textarea {
 
 .container{
   /* display: flex; */
-  color: red;
   max-width: 900px;
   border:3px solid black;
   margin:0 auto;
@@ -98,7 +97,11 @@ textarea {
   /* align-items: center; */
 }
 
-.container darthvader{
+.darthvadertext{
+  padding: 25px;
+}
+
+.container .darthvaderPage{
   background-color: yellow;
 }
 
