background color naar geel

--- a/css/main.css
+++ b/css/main.css
@@ -174,7 +174,7 @@ textarea {
 
 /* Info pagina darth vader */
 main{
-  background-color: #FFFFE0		;
+  background-color: #FFFF66	;
 }
 .darthvaderPage{
   margin: 30px 30px;
