--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@ textarea {
 }
 
 /* Alle info pagina's */
-.darthvadertext , .lukeskywalkertext{
+.DarthVadertext , .LukeSkywalkertext, .TimothyDaltontext{
   font-size: 19px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -182,15 +182,15 @@ textarea {
 main .InfoPaginaDarthVader{
   background-color: #FFFF66	;
 }
-.darthvaderPage{
+.DarthVaderPage{
   padding-top: 20px;
 }
 
-/* Info pagina luke skywalker */
-main .InfoPaginaLukeSkywalker{
-  background-color: rgb(49, 117, 49);
+/* Info pagina luke skywalker en Timothy Dalton*/
+main .InfoPaginaLukeSkywalker, main .InfoPaginaTimothyDalton{
+  background-color: rgb(79, 165, 79);
 }
-.lukeskywalkerPage{
+.LukeSkywalkerPage, .TimothyDaltonPage{
   padding-top: 20px;
 }
 
