--- a/css/main.css
+++ b/css/main.css
@@ -173,25 +173,22 @@ textarea {
 }
 
 /* Alle info pagina's */
-.DarthVadertext, .LukeSkywalkertext, .TimothyDaltontext, .RogerMooretext{
+.InfoText{
   font-size: 19px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.InfoPage{
+  padding-top: 20px;
 }
 
 /* Info pagina darth vader */
 main .InfoPaginaDarthVader{
   background-color: #FFFF66	;
 }
-.DarthVaderPage{
-  padding-top: 20px;
-}
 
 /* Info pagina luke skywalker Timothy Dalton*/
 main .InfoPaginaLukeSkywalker, main .InfoPaginaTimothyDalton{
   background-color: rgb(79, 165, 79);
-}
-.LukeSkywalkerPage, .TimothyDaltonPage{
-  padding-top: 20px;
 }
 
 /* Info pagina Roger Moore, James bond films */
