--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,24 @@ textarea {
    ========================================================================== */
 
 
+/*=================================algemeen===================================*/
+
+.container{
+  max-width: 900px;
+  margin:0 auto;
+}
+.navbar img{
+  height: 50px;
+  margin-left: 10px;
+  border-radius: 3px;
+}
+
+
+.cato-temp-wrapper{
+  width: 40%;
+  border: 1px black solid;
+
+}
   /* stefano smit:
   datum:  saterday 18 okt 14:15;
   functionality: dropdown menu;
@@ -98,6 +116,9 @@ textarea {
     overflow: hidden;
     background-color: #333;
     font-family: Arial;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
   }
   
   /* Links inside the navbar */
@@ -111,13 +132,13 @@ textarea {
   }
   
   /* The dropdown container */
-  .dropdown {
+  .dropdown ,.homebtn{
     float: left;
     overflow: hidden;
   }
   
   /* Dropdown button */
-  .dropdown .dropbtn {
+  .dropdown .dropbtn, .dropbtn-home{
     font-size: 16px;
     border: none;
     outline: none;
@@ -129,7 +150,7 @@ textarea {
   }
   
   /* Add a red background color to navbar links on hover */
-  .navbar a:hover, .dropdown:hover .dropbtn {
+  .navbar a:hover, .dropdown:hover .dropbtn, .dropbtn-home:hover .dropbtn-home{
     background-color: red;
   }
   
@@ -165,12 +186,7 @@ textarea {
   .inlist{
     margin-left: 245px;
   }
-  
 
-.container{
-  max-width: 900px;
-  margin:0 auto;
-}
 
 /* Info pagina darth vader */
 main{
@@ -178,6 +194,7 @@ main{
 }
 .darthvaderPage{
   margin: 30px 30px;
+  height: 760px;
 }
 .darthvadertext{
   font-size: 19px;
