--- a/css/main.css
+++ b/css/main.css
@@ -102,11 +102,6 @@ textarea {
   border-radius: 3px;
 }
 
-
-.cato-temp-wrapper{
-  width: 80%;
-  border: 1px black solid;
-
 }
   /* stefano smit:
   datum:  saterday 18 okt 14:15;
@@ -188,6 +183,16 @@ textarea {
   .inlist{
     margin-left: 245px;
   }
+
+
+/* categorien */
+.cato-keuze-temp{
+  width: 300px;
+  height: 500px;
+}
+
+
+
 
 /* Info pagina darth vader */
 main{
