--- a/css/main.css
+++ b/css/main.css
@@ -109,12 +109,12 @@ footer{
 .container{
   display: flex;
   justify-content: center;
-  width: 80%;
+  width: 900px;
   margin:0 auto;
 }
 
 .container h1{
-  margin:0;
+  margin:20px;
   font-size: 50px;
   text-align: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -142,7 +142,7 @@ footer{
   border: 1px black solid;
 }
 .InfoImg img, .cover-img img{
-  margin: 20px 25px 25px 25px;
+  margin: 0px 25px 25px 25px;
   float: right;
   max-width: 350px;
   max-height: auto;
@@ -340,7 +340,6 @@ main .InfoPaginaDarthVader{
   color: black;
 }
 .Songtext, .InfoText{
-  width: 50%;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
