darth vader pagina aangepast

--- a/css/main.css
+++ b/css/main.css
@@ -345,6 +345,7 @@ main .InfoPaginaDarthVader{
 }
 .Songtext, .InfoText{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.1em;
 }
 
 main#madness{
