--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,12 @@ main{
 footer{
   padding-top:50px ;
 }
+.test-container{
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  margin:0 auto;
+}
 .container{
   display: flex;
   justify-content: center;
@@ -253,7 +259,7 @@ footer{
   padding: 8px;
   text-align: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  width: 200px;
+  width: 300px;
   margin-right: 40px;
   margin-top: 100px;
   text-align: center;
