--- a/css/main.css
+++ b/css/main.css
@@ -99,11 +99,12 @@
   color: inherit;
 }
 header{
-  justify-content: center;
+  
+  width: 100%;
 }
 
 main{
-  width: 100vw;
+  width: 100%;
   height: 97vh;
   
 }
