--- a/css/main.css
+++ b/css/main.css
@@ -115,9 +115,8 @@ footer{
 }
 
 
-
-li {
-  text-decoration: none;
+.rechts ul{
+  list-style-type: none;
 }
 
 .personage-container{
@@ -307,7 +306,7 @@ padding-top: 10px;
 
 .pib-rood  {
   background-color: #cc0000;
-  font-size: 25px;
+  font-size: 20px;
 }
 /*plug in baby orange*/
 .pib-orange{
@@ -321,11 +320,13 @@ padding-top: 10px;
 .Uprising{
   background-color: #B97D4B;
   color: #cc0000;
+  font-size: 15px;
   
 }
 
 .SongtextKillerqueen{
   background-color: #4682B4;
+
 }
 
 .return-btn{
