--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,7 @@ main{
 footer{
   padding-top:20px;
   padding-bottom: 20px;
+  margin-top: 40px;
   background-color:#333;
   color: whitesmoke;
   justify-content: space-evenly;
