--- a/css/main.css
+++ b/css/main.css
@@ -371,9 +371,11 @@ main .InfoPaginaDarthVader{
   width: 50%;
   margin:0px 0px 20px 0px;
 }
-.Songtext, .InfoText{
+.Songtext, .InfoText, .InfoText a{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.1em;
+  text-decoration: none;
+  color: black;
 }
 
 main#madness{
