--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,8 @@ footer{
 }
 
 .container h3{
-  color: grey;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  color: #D3D3D3;
   margin-bottom:10px;
   font-size: 25px;
   text-align: center;
